--- a/package.json
+++ b/package.json
@@ -5,11 +5,26 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-		"build": "node_modules/sass/sass.js --watch style.scss style.css"
+    "styling": "sass --watch style.scss style.css",
+    "scripting": "babel script.js --watch --out-file compiled-script.js",
+    "build": "concurrently \"npm run styling\" \"npm run scripting\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "sass": "^1.29.0"
-  }
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "concurrently": "^5.3.0"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
